# atlas-cmake-nanobind-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_atlas_cmake.sh  build_atlas_nlohmann.sh  build_normal_cmake.sh  build_normal_cpython.sh  build_normal_nlohmann.sh  run_docker.sh
atlas_cmake/: package_filters.txt
atlas_cmake/Projects/WorkDir/: CMakeLists.txt
atlas_cmake/hello_world/: CMakeLists.txt
atlas_cmake/nanobind_example/: CMakeLists.txt
atlas_cmake/nanobind_example/src/: nanobind_example_ext.cpp
atlas_cmake/nlohmann_example/: CMakeLists.txt
atlas_cmake/simple_project/: CMakeLists.txt  simple_example.cpp
normal_cmake/: CMakeLists.txt
normal_cmake/tests/: test_basic.py
normal_cpython/: CMakeLists.txt
normal_cpython/src/: cpython_api_example.cpp
normal_nlohmann/: CMakeLists.txt
src/: nanobind_example_ext.cpp
